    restoring the Cantata window from the Unity menubar.
18. Use freedesktop.org notifications for Qt-only Linux builds.
19. Show menubar when run under Unity.
20. Improve MPRISv2 interface - signal when proprties change.
21. Play/Pause track when middle click on tray icon for Qt-only builds (KDE
    builds already have this). Thanks to spartanj for the patch.

0.8.3.1
-------
1. Fix Qt-only compile.

0.8.3
-----
 1. Add CMake options to disable 'automagic' dependencies - required for gentoo
    USE flags (http://www.gentoo.org/proj/en/qa/automagic.xml). Because of this
    WANT_KDE_SUPPORT option has been renamed to ENABLE_KDE
 2. When requesting covers from a HTTP server, use QUrl::toPercentEncoding.
 3. Fix multiple download attempts when getting covers from HTTP.
 4. With KDE builds (4.7 or later), and Windows Qt builds, reconnect to MPD when
    system is resumed. (A reconnect attempt is made every half second for a max
    of 15 seconds)
 5. To help with windows build, embed pre-rendered versions of main icon.
 6. When restoring window from notification area, also raise and activate the
    window.
 7. Fix issue with certain styles not drawing selection background in icon view.
 8. If we show an error, or info, message whilst using compact interface - then
    adjust size to take message widget into account.
 9. If we lose MPD connection, then show error widget.
10. Reset status when connection lost.
11. Don't attempt to send commands if not connected.
12. In Qt-builds, if we fail to update files (tag editor, replaygain) then
    show the list of failures in the 'detailed text' section.
13. In Qt (Linux) build, also register org.kde.cantata service - so that
    messages from dynamic helper can be received.
14. Update version of KMessageWidget
15. Update Polish translation.
16. Use 'avcodec' if 'ffmpeg' is not found.
17. Show current song details in tooltip of notification icon for Qt builds as
    per KDE builds.