@@ -165,10 +165,6 @@ bool SyncDialog::updateSongs(bool showMessage)
     }
     devWidget->update(inDev);
     libWidget->update(inLib);
-    if (!isVisible()) {
-        devWidget->setIcon(dev->icon());
-        libWidget->setIcon("cantata-view-media-library");
-    }
     return true;
 }
 
