@@ -25,7 +25,6 @@
 #define TREEVIEW_H
 
 #include <QtGui/QTreeView>
-#include <QtGui/QPixmap>
 
 class TreeView : public QTreeView
 {
@@ -46,19 +45,12 @@ public:
     void expandAll();
     void expand(const QModelIndex &idx);
     virtual void setModel(QAbstractItemModel *m);
-    void setPixmap(const QPixmap &pix) {
-        pixmap=pix;
-    }
-    void paintEvent(QPaintEvent *e);
 
 private Q_SLOTS:
     void correctSelection();
 
 Q_SIGNALS:
     bool itemsSelected(bool);
-
-private:
-    QPixmap pixmap;
 };
 
 #endif
